--- a/newproject/app/templates/index.html
+++ b/newproject/app/templates/index.html
@@ -27,6 +27,7 @@
     </div>
     
     {% for jss in all_jss%}
+    <a href = "{%url 'detail' jss.id%}">
     <div class= "all_jss">
         <p>{{jss.title}}</p>
 
@@ -34,6 +35,7 @@
 
         <p>{{jss.updated_at|date:"Y.m.d"}}</p>
     </div>
+    </a>
     {%endfor%}
   </body>
 </html>
